--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,28 @@
-
+server.port=26019
 
 
 spring.cache.type = ehcache
 spring.cache.type.ehcache.config = classpath:ehcache.xml
 
-logging.level.com.ywltest= debug
+
+
+##kafka配置
+spring.kafka.bootstrap-servers=10.19.151.136:9092
+##生产
+spring.kafka.producer.retries=0
+spring.kafka.producer.batch-size=16384
+spring.kafka.producer.buffer-memory=33554432
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+##消费
+spring.kafka.consumer.group-id=spring-boot-demo
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.properties.session.timeout.ms=60000
+
+##手动提交
+spring.kafka.listener.log-container-config=false
+spring.kafka.listener.concurrency=5
+spring.kafka.listener.ack-mode=manual_immediate
