--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,12 @@ spring.kafka.consumer.properties.session.timeout.ms=60000
 spring.kafka.listener.log-container-config=false
 spring.kafka.listener.concurrency=5
 spring.kafka.listener.ack-mode=manual_immediate
+
+
+# influxDB
+spring.influx.url=http://10.19.248.127:8086
+spring.influx.userName=root
+spring.influx.password=Bocom_123
+spring.influx.database=engine_demo
+spring.influx.retention_policy=default
+spring.influx.retention_policy_time=30d
