--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,6 @@ spring.influx.password=Bocom_123
 spring.influx.database=engine_demo
 spring.influx.retention_policy=default
 spring.influx.retention_policy_time=30d
+
+##Ehcache缓存入库保存时间设置
+ehcache.save.time=0/5 * * * * ?
