--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,10 @@ server.port=26019
 spring.cache.type = ehcache
 spring.cache.type.ehcache.config = classpath:ehcache.xml
 
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://10.19.151.143/enc_oss_alarm_center?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowMutiQueries=true&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=Bocom_123
 
 ##kafka≈‰÷√
 spring.kafka.bootstrap-servers=10.19.151.136:9092
@@ -38,3 +41,11 @@ spring.influx.retention_policy_time=30d
 
 ##Ehcacheª∫¥Ê»Îø‚±£¥Ê ±º‰…Ë÷√
 ehcache.save.time=0/5 * * * * ?
+
+#mqtt≈‰÷√
+mqtt-gateway.enabled=true
+mqtt-gateway.url=tcp://${public.mqtt-gateway.url}
+mqtt-gateway.timeout=10000
+mqtt-gateway.keepalive=10000
+mqtt-gateway.userName=${public.mqtt-gateway.userName}
+mqtt-gateway.password=${public.mqtt-gateway.password}
