--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,19 +5,29 @@ spring.cache.type = ehcache
 spring.cache.type.ehcache.config = classpath:ehcache.xml
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://10.19.151.143/enc_oss_alarm_center?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowMutiQueries=true&serverTimezone=GMT%2B8
-spring.datasource.username=root
-spring.datasource.password=Bocom_123
+#spring.datasource.url=jdbc:mysql://10.19.151.143/enc_oss_alarm_center?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowMutiQueries=true&serverTimezone=GMT%2B8
+#spring.datasource.username=root
+#spring.datasource.password=Bocom_123
 
-##kafkaÅäÖÃ
+#spring.datasource.username: root
+#spring.datasource.password: root
+#spring.datasource.url: jdbc:mysql://localhost:3306/mysql?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
+
+spring.datasource.username: ENC(JxTpIzjP330EIqk/47z7Mg==)
+spring.datasource.password: ENC(8HDmqVQXRndkvO9QYjU/NQ==)
+spring.datasource.url: jdbc:mysql://localhost:3306/mysql?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
+
+jasypt.encryptor.password: sad124f1f1rf1fgt5
+
+##kafkaï¿½ï¿½ï¿½ï¿½
 spring.kafka.bootstrap-servers=10.19.151.136:9092
-##Éú²ú
+##ï¿½ï¿½ï¿½ï¿½
 spring.kafka.producer.retries=0
 spring.kafka.producer.batch-size=16384
 spring.kafka.producer.buffer-memory=33554432
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-##Ïû·Ñ
+##ï¿½ï¿½ï¿½ï¿½
 spring.kafka.consumer.group-id=spring-boot-demo
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.consumer.auto-offset-reset=latest
@@ -25,7 +35,7 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.properties.session.timeout.ms=60000
 
-##ÊÖ¶¯Ìá½»
+##ï¿½Ö¶ï¿½ï¿½á½»
 spring.kafka.listener.log-container-config=false
 spring.kafka.listener.concurrency=5
 spring.kafka.listener.ack-mode=manual_immediate
@@ -39,10 +49,10 @@ spring.influx.database=engine_demo
 spring.influx.retention_policy=default
 spring.influx.retention_policy_time=30d
 
-##Ehcache»º´æÈë¿â±£´æÊ±¼äÉèÖÃ
+##Ehcacheï¿½ï¿½ï¿½ï¿½ï¿½ï¿½â±£ï¿½ï¿½Ê±ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 ehcache.save.time=0/5 * * * * ?
 
-#mqttÅäÖÃ
+#mqttï¿½ï¿½ï¿½ï¿½
 mqtt-gateway.enabled=true
 mqtt-gateway.url=tcp://${public.mqtt-gateway.url}
 mqtt-gateway.timeout=10000
